[tool.poetry]
name = "m_socket-py"
version = "1.0.0"
description = "Module for convenient work with TCP sockets."
authors = ["maxrskiy"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/maxrskiy/m_socket-py"
repository = "https://github.com/maxrskiy/m_socket-py"
keywords = [
  "socket",
  "tcp socket",
  "tcp"
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/maxrskiy/m_socket-py/issues"

[tool.poetry.dependencies]
python = "^3.7"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
force-exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
